--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,12 @@ body {
   justify-content: center;
 }
 
+.title-div {
+  display: flex;
+  justify-content: space-between;
+  width: 30vw;
+}
+
 .list-container {
   display: flex;
   align-items: flex-start;
@@ -34,11 +40,18 @@ body {
 }
 
 .to-do-list-item {
+  width: 30vw;
   list-style: none;
   display: flex;
-  align-items: center;
+  justify-content: space-between;
   gap: 0.4rem;
   font-size: 1.5rem;
+}
+
+.to-do-list-item div {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
 }
 
 .checkbox {
