--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,117 +1,126 @@
-$box-shadow: 0 1px 10px rgba(0, 0, 0, 0.314);
-
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-html {
-  font-size: 62.8%;
+.container {
+  width: 100%;
+  min-height: 100vh;
+  padding: 10px;
 }
 
-body {
-  width: 100vw;
-  height: 100vh;
+h2 {
+  font-family: cursive;
+  text-decoration: underline;
+}
+
+.todo-app {
+  width: 100%;
+  max-width: 540px;
+  background-color: white;
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.11);
+  margin: 100px auto;
+  padding: 40px 30px 70px;
+  border-radius: 20px;
+}
+
+.row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 25px 0;
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.062);
+  border-radius: 10px;
+  padding: 10px 10px;
+  width: 100%;
+}
+
+input {
+  flex: 1;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  padding: 10px;
+}
+
+button {
+  border: none;
+  border: 1px solid rgba(0, 0, 0, 0.129);
+  outline: none;
+  padding: 15px 40px;
+  background-color: rgba(63, 70, 63, 0.511);
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 30px;
+}
+
+.edit-btn {
+  // background-color:black;
+  width: 10px;
+  position: absolute;
+  right: 34px;
+  height: 10px;
+  text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
+  top: 10px;
 }
 
-.title-div {
-  display: flex;
-  justify-content: space-between;
-  width: 30vw;
-}
-
-.list-container {
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  flex-direction: column;
-  gap: 2rem;
-  font-size: 2rem;
-  padding: 5rem;
-  border-radius: 0.8rem;
-  box-shadow: $box-shadow;
-  width: 30vw;
-  margin-top: 4rem;
-}
-
-.input-holder {
-  width: 30vw;
-  padding: 0.5rem;
-  border: none;
-}
-
-.to-do-list-item {
-  width: 30vw;
+ul li {
   list-style: none;
-  display: flex;
-  justify-content: space-between;
-  gap: 0.4rem;
-  font-size: 1.5rem;
-  margin: 2rem 0;
-  border-bottom: 1px dotted rgba(0, 0, 0, 0.064);
-  padding-bottom: 1rem;
-}
-
-.input-div {
-  width: 29vw;
-  list-style: none;
-  display: flex;
-  justify-content: space-between;
-  gap: 0.4rem;
-  font-size: 1.5rem;
-  box-shadow: $box-shadow;
-  padding: 1rem 0.5rem;
-  border-radius: 1rem;
-}
-
-.checkbox-and-description {
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
-}
-
-.checkbox {
-  padding: 0.5rem 1rem;
-  background-color: rgba(255, 255, 255, 0.722);
-  border: none;
-  border-radius: 0.5rem;
-  box-shadow: $box-shadow;
-  font-size: 1rem;
-}
-
-.clear-all-button {
-  width: 30vw;
-  font-size: 1.5rem;
-  border-style: none;
-  border-radius: 1rem;
-  padding: 1rem 0;
-  box-shadow: $box-shadow;
+  font-size: 15px;
+  padding: 12px 8px 12px 50px;
+  user-select: none;
   cursor: pointer;
-  transition: all 0.3s;
-}
-
-.gen-btn {
-  border: none;
-  background-color: transparent;
-  font-size: 1.4rem;
-  cursor: pointer;
-  font-weight: 1000;
-  color: rgba(0, 0, 0, 0.315);
-}
-
-.vertical-ellipsis {
   position: relative;
-  left: 24.5vw;
 }
 
-.gen-btn:hover {
-  color: rgb(0, 0, 0);
+ul li::before {
+  content: "";
+  position: absolute;
+  height: 28px;
+  width: 28px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.205);
+  top: 12px;
+  left: 8px;
 }
 
-.clear-all-button:hover {
-  color: white;
-  background-color: rgba(0, 0, 0, 0.407);
+ul li.completed {
+  color: #555;
+  text-decoration: line-through;
+}
+
+ul li.completed::before {
+  content: '✓';
+  text-align: center;
+  font-weight: 1000;
+  color: purple;
+  font-size: 20px;
+}
+
+ul li span {
+  position: absolute;
+  right: 0;
+  top: 5px;
+  width: 40px;
+  height: 40px;
+  font-size: 22px;
+  color: #555;
+  text-align: center;
+  border-radius: 50%;
+}
+
+ul li span:hover {
+  color: rgba(0, 0, 0, 0.405);
+}
+
+.clear-all {
+  width: 100%;
+  position: relative;
+  top: 40px;
 }
